--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
         response-timeout: 60s
       routes:
       - id: auth-service
-        uri: lb://sms-auth-service
+        uri: lb://auth-service
         predicates:
           - Path=/api/auth-service/**
         filters:
