--- a/society-mgmt-service/pom.xml
+++ b/society-mgmt-service/pom.xml
@@ -62,6 +62,11 @@
 			<version>3.12.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.openjdk.jol</groupId>
+			<artifactId>jol-core</artifactId>
+			<version>0.10</version>
+		</dependency>
+		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20231013</version>
